Fix ERP UI resolution shift

--- a/optaweb-employee-rostering-frontend/src/ui/components/WeekPicker.css
+++ b/optaweb-employee-rostering-frontend/src/ui/components/WeekPicker.css
@@ -15,6 +15,7 @@
  */
  .week-picker-container {
     background-color: var(--pf-global--BackgroundColor--100);
+     width: max-content;
  }
 
 .week-picker {
